{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 87,
  "lineage": "2aa921a8-da53-05c1-2a92-40870ad904d1",
  "resources": [
    {
      "module": "module.gke_cluster",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke_network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/fluted-legacy-306402/global/networks/gke-demo",
            "mtu": 0,
            "name": "gke-demo",
            "project": "fluted-legacy-306402",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluted-legacy-306402/global/networks/gke-demo"
          }
        }
      ]
    },
    {
      "module": "module.gke_network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke_network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-west2/gke-demo-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-30T18:33:12.644-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/fluted-legacy-306402/regions/us-west2/subnetworks/gke-demo-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "gke-demo-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/fluted-legacy-306402/global/networks/gke-demo",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fluted-legacy-306402",
            "region": "us-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "gke-demo-ips-pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "gke-demo-ips-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fluted-legacy-306402/regions/us-west2/subnetworks/gke-demo-subnet"
          }
        }
      ]
    }
  ]
}